관심 장학금 구현 완료

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <!-- 기존 아이콘 경로를 새로운 로고 파일 경로로 변경 -->
     <link rel="icon" type="image/png" href="/vite.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="/src/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ScholarMate</title>
   </head>
